--- a/index.html
+++ b/index.html
@@ -147,19 +147,13 @@
 					<h2>Une question ? Une demande de devis ?</h2>
 					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 					<form action="" method="post">
-						<div>
-							<label>Nom</label>
-							<input type="text" name="nom" id="nom">
-						</div>
-						<div>
-							<label>Email</label>
-							<input type="email" name="email" id="email">
-						</div>
-						<div>
-							<label>Message</label>
-							<textarea name="message" id="message" cols="30" rows="10"></textarea>
-							<input type="submit" value="Envoyer"/>
-						</div>
+						<label for="nom">Nom</label>
+						<input type="text" name="nom" id="nom">
+						<label for="email">Email</label>
+						<input type="email" name="email" id="email">
+						<label for="message">Message</label>
+						<textarea name="message" id="message" cols="30" rows="10"></textarea>
+						<input type="submit" value="Envoyer"/>
 					</form>
 				</div>
 				<div class="picture right">
