--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<html lang="fr-fr">
 	<title>Portfolio de Nina Carducci</title>
+	<meta charset="UTF-8">
+	<meta
+	name="description"
+	content="Nina Carducci, photographe indépendante sur plusieurs thématiques distinctes. Mariage, portraits ou évènements, je peux vous prendre en photo !">
+	<meta Cache-Control: max-age=31536000>
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-	<script src="./assets/maugallery.js" defer></script>
-	<script src="./assets/scripts.js" defer></script>
+	<!-- <script src="./assets/bootstrap/bootstrap.bundle.js" async></script> -->
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" async></script>
+	<script src="./assets/maugallery.js" async></script>
+	<script src="./assets/scripts.js" async></script>
 </head>
 <body>
 	<header>
@@ -41,13 +45,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="homme sur passage piéton">
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block" width="100%" height="888px" alt="homme sur passage piéton">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="public de concert">
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block" width="100%" height="888px" alt="public de concert">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="deux mariés qui s'embrassent">
+						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block" width="100%" height="888px" alt="deux mariés qui s'embrassent">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
