--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<html lang="fr-fr">
-	<title>Portfolio de Nina Carducci</title>
+	<title>Portfolio de Nina Carducci - Photographe</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<meta
 	name="description"
 	content="Nina Carducci, photographe indépendante sur plusieurs thématiques distinctes. Mariage, portraits ou évènements, je peux vous prendre en photo !">
 	<meta name=" robots " content="index, follow" />
 	<meta Cache-Control: max-age=31536000>
+	<meta property="og:site_name" content="Nina Carducci" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://anatoledenim.github.io/Menu-Maker-By-Qwenta_/" />
+	<meta property="og:title" content="Portfolio de Nina Carducci - Photographe" />
+	<meta property="og:description" content="Découvrez mes photos qui vont vous plaire. C'est certain !" />
+	<meta property="og:image" content="./assets/images/nina_4_11zon.jpg" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@ninacarducci" />
+	<meta name="twitter:title" content="Portfolio de Nina Carducci - Photographe" />
+	<meta name="twitter:description" content="Découvrez mes photos qui vont vous plaire. C'est certain !" />
+	<meta name="twitter:image" content="./assets/images/nina_4_11zon.jpg" />
+	<meta name="twitter:url" content="https://anatoledenim.github.io/Menu-Maker-By-Qwenta_/" />
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<script type="application/ld+json">
 		{
 		  "@context": "http://schema.org",
@@ -32,16 +49,11 @@
 			"closes": "19:00"
 		  }
 		}
-		</script>
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" async></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" async></script>
-	<script src="./assets/maugallery.js" async></script>
-	<script src="./assets/scripts.js" async></script>
+	</script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
 </head>
 <body>
 	<header>
