--- a/index.html
+++ b/index.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<html lang="fr-fr">
-	<title>Portfolio de Nina Carducci</title>
+	<title>Portfolio de Nina Carducci - Photographe</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
 	<meta
 	name="description"
 	content="Nina Carducci, photographe indépendante sur plusieurs thématiques distinctes. Mariage, portraits ou évènements, je peux vous prendre en photo !">
+	<meta name=" robots " content="index, follow" />
 	<meta Cache-Control: max-age=31536000>
+	<meta property="og:site_name" content="Nina Carducci" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://anatoledenim.github.io/Menu-Maker-By-Qwenta_/" />
+	<meta property="og:title" content="Portfolio de Nina Carducci - Photographe" />
+	<meta property="og:description" content="Découvrez mes photos qui vont vous plaire. C'est certain !" />
+	<meta property="og:image" content="./assets/images/nina_4_11zon.jpg" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@ninacarducci" />
+	<meta name="twitter:title" content="Portfolio de Nina Carducci - Photographe" />
+	<meta name="twitter:description" content="Découvrez mes photos qui vont vous plaire. C'est certain !" />
+	<meta name="twitter:image" content="./assets/images/nina_4_11zon.jpg" />
+	<meta name="twitter:url" content="https://anatoledenim.github.io/Menu-Maker-By-Qwenta_/" />
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" async></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" async></script>
-	<script src="./assets/maugallery.js" async></script>
-	<script src="./assets/scripts.js" async></script>
+	<script type="application/ld+json">
+		{
+		  "@context": "http://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci",
+		  "telephone": "05 56 67 78 89",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200"
+		  },
+		  "openingHoursSpecification": {
+			"@type": "OpeningHoursSpecification",
+			"dayOfWeek": {
+			  "@type": "DayOfWeek",
+			  "name": "Lundi au Vendredi"
+			},
+			"opens": "10:00",
+			"closes": "19:00"
+		  }
+		}
+	</script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
+	<script src="./assets/modalgalery.js" defer></script>
 </head>
 <body>
 	<header>
@@ -29,7 +66,7 @@
 					<li><a href="#gallery">Galerie</a></li>
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" aria-label="mon compte" target="_blank"><img src="assets/images/instagram_3_11zon.jpg" alt="logo instagram" aria-labelledby="instagram"></a></li>
+					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" aria-label="mon compte" target="_blank"><img src="assets/images/instagram_3_11zon.jpg" alt="logo instagram" aria-label="instagram"></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -45,13 +82,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_5_11zon.jpg" class="d-block" alt="homme sur passage piéton">
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block" alt="homme sur passage piéton">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_7_11zon.jpg" class="d-block" alt="public de concert">
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block" alt="public de concert">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_6_11zon.jpg" class="d-block" alt="deux mariés qui s'embrassent">
+						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block" alt="deux mariés qui s'embrassent">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -79,15 +116,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.png" alt="scène d'un concert"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="homme d'affaire"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="femme qui rigole"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="mains qui se joignent"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="homme aveuglé par soleil"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="deux mariés se regardent"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="femme avec lunettes"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="chanteur main levée"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="femme qui rigole devant son ordinateur"/>
+					<img data-gallery-tag="Concert" id="0" class="gallery-item" src="./assets/images/gallery/concerts/gallery-image-0.png" alt="scène d'un concert"/>
+					<img data-gallery-tag="Entreprises" id="1" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-1.jpg" alt="homme d'affaire"/>
+					<img data-gallery-tag="Entreprises" id="2" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-2.jpg" alt="femme qui rigole"/>
+					<img data-gallery-tag="Mariages" id="3" class="gallery-item" src="./assets/images/gallery/mariage/gallery-image-3.jpg" alt="mains qui se joignent"/>
+					<img data-gallery-tag="Portrait" id="4" class="gallery-item" src="./assets/images/gallery/portraits/gallery-image-4.jpg" alt="homme aveuglé par soleil"/>
+					<img data-gallery-tag="Mariages" id="5" class="gallery-item" src="./assets/images/gallery/mariage/gallery-image-5.jpg" alt="deux mariés se regardent"/>
+					<img data-gallery-tag="Portrait" id="6" class="gallery-item" src="./assets/images/gallery/portraits/gallery-image-6.jpg" alt="femme avec lunettes"/>
+					<img data-gallery-tag="Concert" id="7" class="gallery-item" src="./assets/images/gallery/concerts/gallery-image-7.jpg" alt="chanteur main levée"/>
+					<img data-gallery-tag="Entreprises" id="8" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-8.jpg" alt="femme qui rigole devant son ordinateur"/>
 				</div>
 			</div>
 			<div class="quote">
