update(debuging-carousel-2)

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" async></script>
 	<script src="./assets/maugallery.js" async></script>
 	<script src="./assets/scripts.js" async></script>
+	<script src="./assets/modalgalery.js" async></script>
 </head>
 <body>
 	<header>
