--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 		}
 		</script>
 	<script src="./assets/bootstrap/bootstrap.bundle.js" async></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" async></script>
-	<script src="./assets/scripts.js" async></script>
-	<script src="./assets/maugallery.js" async></script>
-	<script src="./assets/modalgalery.js" async></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" rel="preload" crossorigin="anonymous"></script>
+	<script src="./assets/scripts.js" defer></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/modalgalery.js" defer></script>
 </head>
 <body>
 	<header>
@@ -116,15 +116,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" id="0" class="gallery-item" src="./assets/images/gallery/concerts/gallery-image-0.png" alt="scène d'un concert"/>
-					<img data-gallery-tag="Entreprises" id="1" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-1.jpg" alt="homme d'affaire"/>
-					<img data-gallery-tag="Entreprises" id="2" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-2.jpg" alt="femme qui rigole"/>
-					<img data-gallery-tag="Mariages" id="3" class="gallery-item" src="./assets/images/gallery/mariage/gallery-image-3.jpg" alt="mains qui se joignent"/>
-					<img data-gallery-tag="Portrait" id="4" class="gallery-item" src="./assets/images/gallery/portraits/gallery-image-4.jpg" alt="homme aveuglé par soleil"/>
-					<img data-gallery-tag="Mariages" id="5" class="gallery-item" src="./assets/images/gallery/mariage/gallery-image-5.jpg" alt="deux mariés se regardent"/>
-					<img data-gallery-tag="Portrait" id="6" class="gallery-item" src="./assets/images/gallery/portraits/gallery-image-6.jpg" alt="femme avec lunettes"/>
-					<img data-gallery-tag="Concert" id="7" class="gallery-item" src="./assets/images/gallery/concerts/gallery-image-7.jpg" alt="chanteur main levée"/>
-					<img data-gallery-tag="Entreprises" id="8" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-8.jpg" alt="femme qui rigole devant son ordinateur"/>
+					<img data-gallery-tag="Concert" data-id="0" class="gallery-item" src="./assets/images/gallery/concerts/gallery-image-0.png" alt="scène d'un concert"/>
+					<img data-gallery-tag="Entreprises" data-id="1" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-1.jpg" alt="homme d'affaire"/>
+					<img data-gallery-tag="Entreprises" data-id="2" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-2.jpg" alt="femme qui rigole"/>
+					<img data-gallery-tag="Mariages" data-id="3" class="gallery-item" src="./assets/images/gallery/mariage/gallery-image-3.jpg" alt="mains qui se joignent"/>
+					<img data-gallery-tag="Portrait" data-id="4" class="gallery-item" src="./assets/images/gallery/portraits/gallery-image-4.jpg" alt="homme aveuglé par soleil"/>
+					<img data-gallery-tag="Mariages" data-id="5" class="gallery-item" src="./assets/images/gallery/mariage/gallery-image-5.jpg" alt="deux mariés se regardent"/>
+					<img data-gallery-tag="Portrait" data-id="6" class="gallery-item" src="./assets/images/gallery/portraits/gallery-image-6.jpg" alt="femme avec lunettes"/>
+					<img data-gallery-tag="Concert" data-id="7" class="gallery-item" src="./assets/images/gallery/concerts/gallery-image-7.jpg" alt="chanteur main levée"/>
+					<img data-gallery-tag="Entreprises" data-id="8" class="gallery-item" src="./assets/images/gallery/entreprise/gallery-image-8.jpg" alt="femme qui rigole devant son ordinateur"/>
 				</div>
 			</div>
 			<div class="quote">
