minified-boostrap-files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<meta name="twitter:description" content="Découvrez mes photos qui vont vous plaire. C'est certain !" />
 	<meta name="twitter:image" content="./assets/images/nina_4_11zon.jpg" />
 	<meta name="twitter:url" content="https://anatoledenim.github.io/Menu-Maker-By-Qwenta_/" />
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +50,7 @@
 		  }
 		}
 		</script>
-	<script src="./assets/bootstrap/bootstrap.bundle.js" async></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" rel="preload" crossorigin="anonymous"></script>
 	<script src="./assets/scripts.js" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
